@@ -5,6 +5,7 @@
 ^Makefile.(old|bak)\z
 ^FastCalc.(o|c|bs)\z
 ^Math-BigInt-FastCalc-
+^MYMETA\.yml\z
 .*\.patch\z
 pm_to_blib
 \.git.*
