@@ -1,7 +1,7 @@
 ---
 abstract: 'Math::BigInt::Calc with some XS for more speed'
 author:
-  - '=over 4'
+  - 'Original math code by Mark Biggar, rewritten by Tels L<http://bloodgate.com/>'
   - 'Tels <nospam-abuse@bloodgate.com>'
 build_requires:
   ExtUtils::MakeMaker: 6.42
@@ -26,4 +26,4 @@ requires:
   perl: 5.006
 resources:
   license: http://dev.perl.org/licenses/
-version: 0.27
+version: 0.28
